--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,14 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".refresh.android.gpowork.rtappnative.activities.LoginActivity" android:label="@string/login_page">
+
+        </activity>
+        <activity android:name=".refresh.android.gpowork.rtappnative.activities.QcProjectsActivity" android:label="@string/qc_projects">
+
         </activity>
     </application>
 
