--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".refresh.android.gpowork.rtappnative.activities.LoginActivity" android:label="@string/login_page">
+        <activity android:name=".activities.LoginActivity" android:label="@string/login_page">
 
         </activity>
-        <activity android:name=".refresh.android.gpowork.rtappnative.activities.QcProjectsActivity" android:label="@string/qc_projects">
+        <activity android:name=".activities.QcProjectsActivity" android:label="@string/qc_projects">
 
         </activity>
     </application>
